--- a/photo-gallery/package.json
+++ b/photo-gallery/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^9.1.0",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
+    "redux-saga": "^1.3.0",
     "sass": "^1.71.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
